--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,11 @@
 	"trailingComma": "es5",
 	"printWidth": 80,
 	"pluginSearchDirs": ["."],
+	"svelteSortOrder": "options-styles-scripts-markup",
+	"svelteStrictMode": true,
+	"svelteBracketNewLine": false,
+	"svelteAllowShorthand": false,
+	"svelteIndentScriptAndStyle": false,
 	"overrides": [
 		{
 			"files": "*.svelte",
